--- a/package.json
+++ b/package.json
@@ -1,33 +1,52 @@
 {
-  "license": "ISC",
+  "name": "gem-quest",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
-    "deploy": "ts-node ./scripts/deploy.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "type": "module",
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
-    "@project-serum/anchor": "^0.26.0",
+    "@solana-developers/preset-next": "2.2.0",
     "@solana/spl-token": "^0.4.8",
-    "@solana/web3.js": "^1.95.0",
+    "@solana/web3.js": "^1.95.1",
+    "@web3auth/base": "^8.8.0",
+    "@web3auth/default-solana-adapter": "^8.8.0",
+    "@web3auth/modal": "^8.10.2",
+    "@web3auth/solana-provider": "^8.8.0",
+    "@web3auth/web3auth": "^2.1.3",
+    "animate.css": "^4.1.1",
     "bs58": "^6.0.0",
-    "dotenv": "^16.4.5",
-    "ts-node": "^10.9.2",
-    "yarn": "^1.22.22"
+    "date-fns": "^3.6.0",
+    "html5-qrcode": "^2.3.8",
+    "next": "14.2.5",
+    "openai": "^4.52.7",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-qr-code": "^2.0.15",
+    "react-stepper-horizontal": "^1.0.11",
+    "react-toastify": "^10.0.5",
+    "react-tooltip-rc": "^4.3.5"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
-    "prettier": "^2.6.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^5"
   }
 }
